manejo de junit, endpoint ventas del dia y jms implementado

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,11 @@
 custom:
   basic: 
     list: am9zZTphbGVqYW5kcm8=,cm9iZXJ0bzpjb3J0ZXM=,cGVkcm86cmFtaXJleg==,Y2FybWVuOm1hZ2FsbGFuZXM=,am9yZ2U6c2FsaW5hcw==,ZmVybmFuZG86Y29ydGVz
+    
+spring:
+  activemq:
+    broker-url: tcp://localhost:61616
+    in-memory: false
+    pool:
+      enabled: false
+ 
